fixing links - filling some gaps quickly

--- a/assets/css/silk.css
+++ b/assets/css/silk.css
@@ -250,7 +250,7 @@ a.book, a.next {
 	font-weight: bold;
 	margin-right: 15px;
 	background-color: #888;
-	box-shadow: 4px 4px 3px #ddd;
+	box-shadow: 4px 4px 3px #aaa;
 	-webkit-border-radius: 2px;
 	-moz-border-radius: 2px;
 	border-radius: 2px;	
